<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="org.secuso.UnoVivo.activities.WorkoutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="right"
        android:theme="@style/AppTheme.AppBarOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:layout_marginStart="70dp"
                android:textStyle="bold"
                android:text="default"
                android:textColor="@color/white"
                android:id="@+id/header_bar_text" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8" />

            <ImageButton
                android:id="@+id/volume_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_weight="0"
                android:background="@null"
                android:clickable="true"
                android:src="@drawable/ic_volume_loud_24dp"
                app:tint="@color/transparent" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_workout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_pause_resume"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="bottom|center"
        android:layout_margin="75dp"
        android:background="@drawable/button_fullwidth"
        android:elevation="0dp"
        android:onClick="onClick"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"/>

    <TextView
        android:id="@+id/finish_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/workout_finish_button"
        android:textAlignment="center"
        android:elevation="6dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_anchor="@+id/fab_pause_resume"
        app:layout_anchorGravity="center" />

    <LinearLayout
        android:layout_marginTop="55dp"
        android:id="@+id/finishedView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:elevation="15dp"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/workout_finished_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_weight="0.4"
            android:clickable="true"
            android:elevation="0dp"
            android:onClick="onClick"
            android:text="@string/workout_finished_text"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/workout_finished_calories_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignBottom="@+id/workout_finished_text"
            android:layout_weight="0"
            android:gravity="top|center"
            android:text="@string/workout_finished_calories_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/workout_finished_calories_number"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignBottom="@+id/workout_finished_text"
            android:layout_weight="0"
            android:gravity="top|center"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/workout_finished_calories_unit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0"
            android:gravity="top|center"
            android:text="@string/workout_finished_calories_unit"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="75dp"
            android:layout_weight="0.6">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@drawable/button_fullwidth"
                android:elevation="0dp">

                <TextView
                    android:id="@+id/workout_finished_ok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:elevation="0dp"
                    android:onClick="onClick"
                    android:text="@string/okay"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
